spring boot 核心练习

--- a/test-spring-boot/src/main/resources/application-prod.properties
+++ b/test-spring-boot/src/main/resources/application-prod.properties
@@ -1,14 +1,11 @@
 # tomcat port 
-#server.port=8080
+server.port=8080
 #tomcat default path "/"->"/helloboot"
-#server.context-path=/helloboot
+server.context-path=/helloboot-prod
 
 #log 
-#logging.level.org.spring.web=debug
+logging.level.org.spring.web=info
 #logging.file=
-
-#environment perpro
-spring.profiles.active=prod
 
 
 # consumer properties
