--- a/test-spring-boot/pom.xml
+++ b/test-spring-boot/pom.xml
@@ -27,6 +27,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -61,11 +66,11 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
         <!-- 测试lib依赖 -->
-        <dependency>
+        <!-- <dependency>
             <groupId>cn.paypalm</groupId>
             <artifactId>test-hello-start-lib</artifactId>
   			<version>0.0.1-SNAPSHOT</version>
-        </dependency>
+        </dependency> -->
 	</dependencies>
 
 	<build>
