--- a/test/pom.xml
+++ b/test/pom.xml
@@ -9,6 +9,11 @@
 
   <name>test</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>  
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+        <springframework.version>4.3.7.RELEASE</springframework.version> 
+    </properties>
 
    <build>
 		<finalName>${artifactId}-${version}</finalName>
@@ -90,5 +95,31 @@
 			<version>1.16.12</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!--========================= 2017-8-2 14:53:32 quartz add start =========================-->
+		<dependency>  
+            <groupId>org.springframework</groupId>  
+            <artifactId>spring-core</artifactId>  
+            <version>${springframework.version}</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework</groupId>  
+            <artifactId>spring-context-support</artifactId>  
+            <version>${springframework.version}</version>  
+        </dependency>  
+        <!-- Transaction dependency is required with Quartz integration -->  
+        <dependency>  
+            <groupId>org.springframework</groupId>  
+            <artifactId>spring-tx</artifactId>  
+            <version>${springframework.version}</version>  
+        </dependency>  
+           
+        <!-- Quartz framework -->  
+        <dependency>  
+            <groupId>org.quartz-scheduler</groupId>  
+            <artifactId>quartz</artifactId>  
+            <version>2.2.3</version>
+        </dependency> 
+        <!--============================== quartz end =====================================-->
   </dependencies>
 </project>
