--- a/test/pom.xml
+++ b/test/pom.xml
@@ -121,5 +121,54 @@
             <version>2.2.3</version>
         </dependency> 
         <!--============================== quartz end =====================================-->
+        
+        <!-- dubbo -->
+        <dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>dubbo</artifactId>
+		    <version>2.5.3</version>
+	      <exclusions>
+	        <exclusion>
+	          <groupId>org.springframework</groupId>
+	          <artifactId>*</artifactId>
+	        </exclusion>
+	        <exclusion>
+	          <groupId>org.jboss.netty</groupId>
+	          <artifactId>netty</artifactId>
+	        </exclusion>
+	      </exclusions>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>org.apache.zookeeper</groupId>
+		    <artifactId>zookeeper</artifactId>
+		    <version>3.5.2-alpha</version>
+		    <type>pom</type>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.101tec</groupId>
+		    <artifactId>zkclient</artifactId>
+		    <version>0.10</version>
+		</dependency>
+		<!--官方提供配置
+		<dependency>
+		    <groupId>com.github.sgroschupf</groupId>
+		    <artifactId>zkclient</artifactId>
+		    <version>0.1</version>
+		</dependency>		 
+		 -->
+		<dependency>
+		    <groupId>com.netflix.curator</groupId>
+		    <artifactId>curator-framework</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>	
+        <!-- dubbo==end -->
   </dependencies>
 </project>
