/jdk/src/share(windows)/classes openjdk sun jar
Change-Id: I5f8a3b1ec813c8d60ddba125f0c014e07676805b

--- a/test/src/main/resources/dubbo.properties
+++ b/test/src/main/resources/dubbo.properties
@@ -1,12 +1,13 @@
 ##dubbo config
-dubbo.container=springcloud
+#dubbo.container=springcloud
 dubbo.application.name=cloud-test
-dubbo.application.owner=zlc
+dubbo.application.owner=
 dubbo.provider.timeout=60000
 dubbo.provider.retries=0
 dubbo.registry.address=zookeeper://192.168.31.12:2181
+dubbo.registry.protocol=zookeeper
 
-#dubbo.registry.client=curator
+dubbo.registry.client=curator
 dubbo.protocol.host=192.168.22.22
 dubbo.protocol.port=10880
 dubbo.protocol.dispather=message
