本地存根，本地伪装

--- a/test/src/main/resources/dubbo.properties
+++ b/test/src/main/resources/dubbo.properties
@@ -1,10 +1,10 @@
 ##dubbo config
-#dubbo.container=springcloud
+dubbo.container=springcloud,consumer
 dubbo.application.name=cloud-test
 dubbo.application.owner=
 dubbo.provider.timeout=60000
 dubbo.provider.retries=0
-dubbo.registry.address=zookeeper://192.168.31.12:2181
+dubbo.registry.address=zookeeper://192.168.31.37:2181
 dubbo.registry.protocol=zookeeper
 
 dubbo.registry.client=curator
