--- a/test/src/main/resources/log4j.properties
+++ b/test/src/main/resources/log4j.properties
@@ -20,3 +20,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 # Print only messages of level WARN or above in the package com.foo.
 #log4j.logger.com.foo=WARN
+log4j.logger.org.springframework.beans=WARN
+log4j.logger.org.springframework.core=WARN
+log4j.logger.org.springframework.context=WARN
